# juris-agi-monorepo

./: .gitignore  DEPLOYMENT.md  package-lock.json  package.json  pyproject.toml  turbo.json
apps/evidence-api/: .env.example  MULTI_TENANCY_IMPLEMENTATION_PLAN.md  Makefile  alembic.ini  pyproject.toml  pytest.ini  vercel.json
apps/evidence-api/alembic/: env.py
apps/evidence-api/alembic/versions/: 20250113_000004_004_add_integration_keys.py  20250114_000006_006_add_document_profile_code.py  20250114_000007_007_add_process_context.py  20250114_000008_008_add_agentk_metadata_fields.py  20250115_000014_014_add_folders.py  20250116_000015_015_add_multi_tenancy.py
apps/evidence-api/api/: index.py  requirements.txt
apps/evidence-api/docs/: ARCHITECTURE.md
apps/evidence-api/src/evidence_repository/: config.py
apps/evidence-api/src/evidence_repository/api/: __init__.py  dependencies.py  middleware.py
apps/evidence-api/src/evidence_repository/api/routes/: __init__.py  admin.py  debug.py  documents.py  folders.py  jobs.py  projects.py  tenants.py
apps/evidence-api/src/evidence_repository/db/: engine.py  session.py
apps/evidence-api/src/evidence_repository/digestion/: __init__.py  deletion.py  embedding_generator.py  metadata_extractor.py  parsers.py  pipeline.py  polling_worker.py  status.py
apps/evidence-api/src/evidence_repository/embeddings/: chunker.py  span_embedding_service.py
apps/evidence-api/src/evidence_repository/extraction/: csv_extractor.py  excel_extractor.py  extractor_service.py  image_extractor.py  lovepdf.py
apps/evidence-api/src/evidence_repository/extraction/multilevel/: __init__.py  prompts.py
apps/evidence-api/src/evidence_repository/extraction/vocabularies/: pharma.py  vc.py
apps/evidence-api/src/evidence_repository/ingestion/: __init__.py  service.py
apps/evidence-api/src/evidence_repository/models/: __init__.py  analysis.py  audit.py  deletion.py  document.py  embedding.py  evidence.py  extraction_level.py  facts.py  ingestion.py  integration_key.py  job.py  project.py  quality.py  tenant.py
apps/evidence-api/src/evidence_repository/queue/: connection.py  job_queue.py  jobs.py  task_runner.py
apps/evidence-api/src/evidence_repository/schemas/: __init__.py  evidence.py  folder.py  integration_key.py  project.py  search.py
apps/evidence-api/src/evidence_repository/services/: __init__.py  bulk_ingestion_service.py  document_service.py  evidence_service.py  project_service.py  search_service.py  two_stage_search.py
apps/evidence-api/src/evidence_repository/spans/: __init__.py  base.py  excel_span_generator.py  service.py  text_span_generator.py
apps/evidence-api/src/evidence_repository/storage/: s3.py
apps/evidence-api/tests/: conftest.py  test_bulk_ingestion.py  test_digestion_pipeline.py  test_integration_flow.py  test_job_queue.py  test_multilevel_extraction.py  test_process_document_version.py  test_quality_analysis.py  test_span_embedding_service.py  test_span_generators.py  test_storage_local.py
apps/evidence_api/: .gitignore  requirements.txt  vercel.json
apps/juris-agi-web/: DATABASE_ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_PROGRESS.md  THIRD_PARTY_SERVICES_ARCHITECTURE.md  next.config.js  package-lock.json  (+3 more)
apps/juris_edge/python/: pyproject.toml
apps/juris_edge/python/demo/: generate_example_report.py  seed_data.py
apps/juris_edge/python/demo/reports/: cloudmetrics-2023-report.html  cloudmetrics-2023-report.md  cloudmetrics-2023-trace.json  cryptolend-2023-report.html  cryptolend-2023-trace.json  healthbridge-2024-report.html  quantumsense-2024-report.html
apps/juris_edge/python/docs/: LOCAL_POC.md
apps/juris_edge/python/juris_agi/: __init__.py
apps/juris_edge/python/juris_agi/api/: local_config.py  local_server.py  worker.py
apps/juris_edge/python/juris_agi/config/: validate.py
apps/juris_edge/python/juris_agi/context_builder/: quality.py
apps/juris_edge/python/juris_agi/controller/: __init__.py  router.py  scheduler.py
apps/juris_edge/python/juris_agi/core/: state.py  storage.py
apps/juris_edge/python/juris_agi/cre/: critic_neural.py  refinement.py  sketcher_model.py
apps/juris_edge/python/juris_agi/dsl/: ast.py  interpreter.py
apps/juris_edge/python/juris_agi/eval/: __init__.py  ablations.py
apps/juris_edge/python/juris_agi/evidence/: loader.py  ontology.py
apps/juris_edge/python/juris_agi/evidence/extractors/: financial_model.py  ic_memo.py  pitch_deck.py
apps/juris_edge/python/juris_agi/evidence_client/: __init__.py  client.py  errors.py
apps/juris_edge/python/juris_agi/mal/: retrieval.py
apps/juris_edge/python/juris_agi/report/: generator.py  renderers.py
apps/juris_edge/python/juris_agi/representation/: features.py  objects.py  tokenizer.py
apps/juris_edge/python/juris_agi/train/: __init__.py  train_sketcher.py
apps/juris_edge/python/juris_agi/vc/: __init__.py  counterfactuals.py  decision_analysis.py  trace.py
apps/juris_edge/python/juris_agi/vc_dsl/: evaluation.py  hypothesis.py  predicates_v2.py
apps/juris_edge/python/juris_agi/wme/: __init__.py  counterfactuals.py  robustness.py
apps/juris_edge/python/models/: registry.json
apps/juris_edge/python/tests/: __init__.py  test_api.py  test_end_to_end.py  test_local_poc.py  test_mal.py  test_objects_constraints.py  test_vc_counterfactuals.py  test_wme.py
apps/juris_edge/python/tests/api/: test_vc_endpoints.py
apps/juris_edge/python/tests/config/: __init__.py  test_presets.py
apps/juris_edge/python/tests/context_builder/: test_context_builder.py
apps/juris_edge/python/tests/evidence_client/: __init__.py  test_client.py
apps/juris_edge/python/tests/vc_dsl/: test_evaluation.py  test_hierarchy.py  test_hypothesis.py  test_timeseries.py  test_uncertainty.py
docs/: UI_REBUILD_SPEC.md
(+400 files in other folders)
