[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evidence-repository"
version = "0.1.0"
description = "API-first Evidence Repository for Juris-AGI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Juris-AGI Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.2.4",
    "alembic>=1.13.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "openai>=1.10.0",
    "aiofiles>=23.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Serverless adapter for Vercel
    "mangum>=0.17.0",
    # Optional: Redis for faster job processing (Upstash compatible)
    "redis>=5.0.0",
    "rq>=1.15.0",
    # File processing
    "openpyxl>=3.1.0",
    "pillow>=10.2.0",
    "pypdf>=4.0.0",
    # Document parsers (Agent-K style)
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "beautifulsoup4>=4.12.0",
    # S3-compatible storage (Cloudflare R2)
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
evidence-api = "evidence_repository.main:run"
evidence-worker = "evidence_repository.digestion.polling_worker:main"
# Vercel looks for this entry point
app = "evidence_repository.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/evidence_repository"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.isort]
known-first-party = ["evidence_repository"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/evidence_repository --cov-report=term-missing"
