[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juris-agi"
version = "0.1.0"
description = "A Neuro-Symbolic AGI System for ARC-style Reasoning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "JURIS-AGI Team"}
]
keywords = ["agi", "arc", "neuro-symbolic", "reasoning", "program-synthesis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
neural = [
    "torch>=2.0",
]
local = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0",
    "httpx>=0.24.0",
]
api = [
    "juris-agi[local]",
    "redis>=4.5.0",
    "rq>=1.15.0",
    "boto3>=1.28.0",
]
all = [
    "juris-agi[dev,neural,api]",
]

[project.scripts]
juris-arc = "juris_agi.eval.run_arc:main"
juris-api = "juris_agi.api.server:main"
juris-worker = "juris_agi.api.worker:main"
juris-local = "juris_agi.api.local_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
